# ray_tracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  final.ppm  hittable.h  hittable_list.h  image-90.ppm  image.ppm  interval.h  main.cpp  material.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
include/core/: camera.h  constants.h  random_utils.h  vec3.h
include/geometry/: bvh.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  sphere.h
include/materials/: material.h  texture.h
output/: epic.ppm
src/: main.cpp
